--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ header p {
 .jumbotron {
   display: flex;
   align-items: center;
-  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/jumbotron.jpg');
+  background-image: url('https://raw.githubusercontent.com/inigo333/inigo333.github.io/master/images/lecreuset/lecreuset_azul.jpg');
   background-size: cover;
   color: #ffffff;
   height: 500px;
